--- a/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
+++ b/microsetta_interface/translations/es_MX/LC_MESSAGES/messages.po
@@ -2822,7 +2822,7 @@ msgstr ""
 "participantes de Microsetta en los Estados Unidos.\">promedio</span> de "
 "diversidad para las personas que viven en los EE. UU. en nuestra base de "
 "datos es de <strong id=\"average-american-observed-"
-"average\">FILLIN</strong>, que es más bajo que el que encontramos en las "
+"average-gut\">FILLIN</strong>, que es más bajo que el que encontramos en las "
 "personas que viven un estilo de vida más cazador-recolector como el "
 "pueblo <span id=\"taxa-tooltip\" class=\"orange-text\" data-bs-"
 "toggle=\"tooltip\" data-bs-html=\"true\" data-bs-placement=\"top\" "
@@ -2852,7 +2852,7 @@ msgstr ""
 "participantes de Microsetta en los Estados Unidos.\">promedio</span> de "
 "diversidad para las personas que viven en los EE. UU. en nuestra base de "
 "datos es de <strong id=\"average-american-observed-"
-"average\">FILLIN</strong>."
+"average-skin\">FILLIN</strong>."
 
 #: templates/new_results_page.jinja2:1553
 msgid "What does this number mean for my health?"
